--- a/TrainingApp/appsettings.json
+++ b/TrainingApp/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=DbName;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TrainingAppDb;"
   }
 }
