--- a/TrainingApp/appsettings.json
+++ b/TrainingApp/appsettings.json
@@ -1,5 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TrainingAppDb;"
+    "DefaultSQLConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TrainingAppDb;",
+    "DefaultJSONFolderPath": "",
+    "DefaultTxtFolderPath": ""
   }
 }
