--- a/TrainingApp/appsettings.json
+++ b/TrainingApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TrainingAppDb;",
-    "DefaultJSONFolderPath": "",
+    "DefaultJSONFolderPath": "C:\\Users\\Maksim_Martyniuk\\source\\repos\\TrainingApp",
     "DefaultTxtFolderPath": ""
   }
 }
